SunEC throws ProviderException on invalid curves

XMLWordPrintable

    • b16
    • Verified

        This issue found during Wycheproof Test execution while generating "Brainpool" keypairs it throws "java.security.ProviderException" instead of "java.security.InvalidAlgorithmParameterException".

        By looking into the Source code in "ECKeyPairGenerator.java[line: 146]", It looks like actual exception "java.security.InvalidAlgorithmParameterException" is wrapped by "java.security.ProviderException".

        Not sure which exception is right and expected. This bug is to find which exception type is correct to be thrown outside.

              Assignee:
              Adam Petcher (Inactive)
              Reporter:
              Sibabrata Sahoo
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: