8182999: SunEC throws ProviderException on invalid curves

Reviewed-by: vinnie